# module/category/usecase/commands/dto.cmd.go
@@ -1,0 +1,6 @@
+package categorycommands
+
+type CreateCategoryDTO struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
